@@ -17,6 +17,12 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+common/c_misc.c lib/settings
+Fix for bug #1622609: Specific flags no longer displayed with 'who command
+Replaced [] by <> in the who output command, as [] are reserved for the various
+formatting tags.
+Yann Chachkoff 2006-12-29
+
 Fix for bug #1622575: Range attack switches to punching on contact,
  applied patch courtesy Aaron Baugher
  server/skill_util.c: use good flag to not switch.
